// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvestmentAllocation renders <InvestmentAllocation /> 1`] = `
"<div>
  <BoxRow spacing=\\"normal\\">
    <AcquisitionDetails report={{...}} />
    <RetentionDetails report={{...}} />
  </BoxRow>
  <BoxRow spacing=\\"normal\\">
    <InvestmentAllocationChart name=\\"acquisition\\" expenses={{...}} total=\\"68400.00\\" />
    <InvestmentAllocationChart name=\\"retention\\" expenses={{...}} total=\\"0.00\\" />
  </BoxRow>
</div>"
`;

exports[`InvestmentAllocation renders <InvestmentAllocation.AcquisitionDetails /> 1`] = `
"<ReportSection name=\\"Acquisition\\">
  <WithFormatters(SmallBoxLayout) name=\\"Leased Unit Change\\" value={7} target={1} symbolType=\\"sign\\" />
  <WithFormatters(SmallBoxLayout) name=\\"Acquisition Investment\\" value=\\"2520.68\\" detail2={[undefined]} target=\\"5079.320000000000000000000000\\" delta=\\"0.00\\" />
  <WithFormatters(SmallBoxLayout) name=\\"Est. Acquired Leasing Revenue\\" value=\\"73951.08\\" target=\\"10564.44\\" symbolType=\\"sign\\" />
  <WithFormatters(SmallBoxLayout) name=\\"Acquisition ROMI\\" infoTooltip=\\"acquisition_romi\\" value={29} target={2} symbolType=\\"multiple\\" tooltip=\\"$74k / $2.5k\\" />
</ReportSection>"
`;

exports[`InvestmentAllocation renders <InvestmentAllocation.InvestmentAllocationChart /> acquisition type 1`] = `
"<div className=\\"investment-allocation\\">
  <ReportSection name=\\"acquisition INVESTMENT ALLOCATIONS\\">
    <div className=\\"investment-allocation__body\\">
      <div className=\\"investment-allocation__chart\\">
        <VictoryPie width={NaN} height={NaN} data={{...}} labelRadius={[Function: labelRadius]} labels={[Function: getPieSliceLabel]} style={{...}} padding={0} standalone={true} dataComponent={{...}} labelComponent={{...}} containerComponent={{...}} groupComponent={{...}} sortOrder=\\"ascending\\" theme={{...}} />
      </div>
      <div className=\\"investment-allocation__expenses\\">
        <ExpenseRow title=\\"Reputation Building\\" value={20400} infoTooltip=\\"acquisition_reputation_building\\" />
        <ExpenseRow title=\\"Demand Creation\\" value={48000} infoTooltip=\\"acquisition_demand_creation\\" />
        <ExpenseRow title=\\"Leasing Enablement\\" value={0} infoTooltip=\\"acquisition_leasing_enablement\\" />
        <ExpenseRow title=\\"Market Intelligence\\" value={0} infoTooltip=\\"acquisition_market_intelligence\\" />
      </div>
    </div>
  </ReportSection>
</div>"
`;

exports[`InvestmentAllocation renders <InvestmentAllocation.InvestmentAllocationChart /> retention type 1`] = `
"<div className=\\"investment-allocation\\">
  <ReportSection name=\\"retention INVESTMENT ALLOCATIONS\\">
    <div className=\\"investment-allocation__body\\">
      <div className=\\"investment-allocation__chart\\">
        <VictoryPie width={NaN} height={NaN} data={{...}} labelRadius={[Function: labelRadius]} labels={[Function: getPieSliceLabel]} style={{...}} padding={0} standalone={true} dataComponent={{...}} labelComponent={{...}} containerComponent={{...}} groupComponent={{...}} sortOrder=\\"ascending\\" theme={{...}} />
      </div>
      <div className=\\"investment-allocation__expenses\\">
        <ExpenseRow title=\\"Reputation Building\\" value={0} infoTooltip=\\"retention_reputation_building\\" />
        <ExpenseRow title=\\"Demand Creation\\" value={0} infoTooltip=\\"retention_demand_creation\\" />
        <ExpenseRow title=\\"Leasing Enablement\\" value={0} infoTooltip=\\"retention_leasing_enablement\\" />
        <ExpenseRow title=\\"Market Intelligence\\" value={0} infoTooltip=\\"retention_market_intelligence\\" />
      </div>
    </div>
  </ReportSection>
</div>"
`;

exports[`InvestmentAllocation renders <InvestmentAllocation.InvestmentAllocationChart /> retention type 2`] = `
"<div className=\\"investment-allocation\\">
  <ReportSection name=\\"retention INVESTMENT ALLOCATIONS\\">
    <div className=\\"investment-allocation__body\\">
      <div className=\\"investment-allocation__chart\\">
        <VictoryPie width={NaN} height={NaN} data={{...}} labelRadius={[Function: labelRadius]} labels={[Function: getPieSliceLabel]} style={{...}} padding={0} standalone={true} dataComponent={{...}} labelComponent={{...}} containerComponent={{...}} groupComponent={{...}} sortOrder=\\"ascending\\" theme={{...}} />
      </div>
      <div className=\\"investment-allocation__expenses\\">
        <ExpenseRow title=\\"Reputation Building\\" value={0} infoTooltip=\\"retention_reputation_building\\" />
        <ExpenseRow title=\\"Demand Creation\\" value={0} infoTooltip=\\"retention_demand_creation\\" />
        <ExpenseRow title=\\"Leasing Enablement\\" value={6000} infoTooltip=\\"retention_leasing_enablement\\" />
        <ExpenseRow title=\\"Market Intelligence\\" value={0} infoTooltip=\\"retention_market_intelligence\\" />
      </div>
    </div>
  </ReportSection>
</div>"
`;

exports[`InvestmentAllocation renders <InvestmentAllocation.RetentionDetails /> 1`] = `
"<ReportSection name=\\"Retention\\">
  <WithFormatters(SmallBoxLayout) name=\\"Lease Renewals\\" value={3} target={8} delta={-14} />
  <WithFormatters(SmallBoxLayout) name=\\"Retention Investment\\" value=\\"287.08\\" detail2={[undefined]} target=\\"150.1600000000000000000000000\\" delta=\\"0.00\\" />
  <WithFormatters(SmallBoxLayout) name=\\"Est. Retained Leasing Revenue\\" value=\\"31693.32\\" target=\\"84515.52\\" symbolType=\\"sign\\" />
  <WithFormatters(SmallBoxLayout) name=\\"Retention ROMI\\" infoTooltip=\\"retention_romi\\" value={110} target={563} symbolType=\\"multiple\\" tooltip=\\"$31.7k / $287.1\\" />
</ReportSection>"
`;
